fix pr comments